--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ section:nth-of-type(4) { padding-left: 25px; padding-right: 25px; }
         margin-left: 0;
       }
     }
-    .bg-pic2{background:url(https://t1.daumcdn.net/cafeattach/1IHuH/3f4aac4039b0f0b58911d6409efdc90c68417410);
+    .bg-pic2{background:url(gif.gif);
     background-attachment: fixed;}}
     .padding-left{padding-left: 3000px}
     .bg-wine{background:#990033;
