--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ section:nth-of-type(4) { padding-left: 25px; padding-right: 25px; }
         margin-left: 0;
       }
     }
-    .bg-pic2{background:url(gif.gif);
+    .bg-pic2{background:url(mmm.jpg);background-size: 200px;
     background-attachment: fixed;}}
     .padding-left{padding-left: 3000px}
     .bg-wine{background:#990033;
